# llm-bedrock-meta

./: .gitignore  README.md  llm_bedrock_meta.py  pyproject.toml
.github/workflows/: publish.yml  test.yml
test/: test_bedrock_meta.py
